{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerShip",
            "id": "40e0c021-8b2b-47c2-8c09-0c07232be718",
            "actions": [
                {
                    "name": "ToggleSlot_1",
                    "type": "Button",
                    "id": "0546c9aa-ea63-4dcc-8469-54bf924fb546",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSlot_2",
                    "type": "Button",
                    "id": "eb13f302-d11f-4eed-b75f-da5959c0e791",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSlot_3",
                    "type": "Button",
                    "id": "30a32f41-8864-45a9-b2bf-8e92cbd67098",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToolPrimary",
                    "type": "Button",
                    "id": "06370757-8d74-438c-a5fc-234cf5f42477",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToolSecondary",
                    "type": "Button",
                    "id": "b2505daa-6e37-4b97-b0f0-9b1bbd690924",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToolThird",
                    "type": "Button",
                    "id": "6a6318fa-f9b0-4a83-b1e2-7659e0a3a6ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Brakes",
                    "type": "Button",
                    "id": "f44241a1-ae12-49b1-968c-46e3a4f6f4e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Thrust",
                    "type": "Value",
                    "id": "a86a0477-64f5-45aa-bbe4-972be76d9523",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Strafe",
                    "type": "Value",
                    "id": "e44975b0-3ccd-47bd-824b-055fe946f162",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pitch",
                    "type": "Value",
                    "id": "ee059aac-951f-4baf-81d1-ee94905098c8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Yaw",
                    "type": "Value",
                    "id": "7b9e5dd1-91c9-485e-a0bc-9512d925bacd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll",
                    "type": "Value",
                    "id": "d7272ac4-8b6d-4f83-a6da-781284d7b737",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71cc4386-c5e5-411c-969f-63611f2d9ed5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSlot_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da645384-fbff-45ab-9ca9-b4c431cc0d1e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSlot_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e09b738-071e-4b68-b10c-9dc2634a031f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSlot_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "169f05d3-c038-47c4-ae33-d1d2626bb92a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToolPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12e15f89-592b-4bca-8f66-9946a559425b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToolSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "277b6764-9139-4d5b-a73c-3c024a818683",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brakes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ThrustKB",
                    "id": "49547e73-0abc-498d-886e-e56caf02b87f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d79a2557-b0a0-439d-b6e2-39cfffb0e2fd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ab15037f-fa99-46ba-af0d-7ec811459133",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "StrafeKB",
                    "id": "2dff6b50-469d-40ba-91ec-bc79bd829315",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "12c22c9f-127e-4c38-8404-1d4e1f9bff67",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c594dc1f-bb14-4e03-8d0c-5d890a6ab55a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "PitchKB",
                    "id": "1d2474da-6d5a-4d6c-8026-8aa798182b69",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2a8e5547-52ca-4d5d-8427-8c448a0225c5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8e62f3be-6868-4f20-8451-b59dcbd09003",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "YawKB",
                    "id": "02f67b70-fb1f-4712-af71-ab88a734f9a9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fa205a5b-2abc-4d91-af8b-3c38c8f5f946",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6fbeb2c5-63a0-4675-b918-a50422098dda",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "RollKB",
                    "id": "ea7003a9-84c6-415e-bda9-99dc143b7013",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "7bee88fd-3571-4eff-9d60-63d8834a01cd",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "0a005394-e7ea-4b29-8ff5-8f257be59f25",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0f2b7d38-fc74-45d4-9427-cf514d3659d2",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToolThird",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "beb6d50b-661a-4f2f-8fa9-e284c8a0f514",
            "actions": [
                {
                    "name": "CloseWindowOpenPause",
                    "type": "Button",
                    "id": "da0059cc-2e16-4147-98b0-f124c91eab12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleInventory",
                    "type": "Button",
                    "id": "80a86b74-e1ac-4cca-8591-eb0336f64123",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleWagons",
                    "type": "Button",
                    "id": "844fb4ca-5f6b-46b4-bc5f-d46056815b0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleProduction",
                    "type": "Button",
                    "id": "b4cc0ca3-394b-43bf-891e-43a150cc40ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleJournal",
                    "type": "Button",
                    "id": "c23b05dd-131a-422c-a80f-527071feb77c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleMap",
                    "type": "Button",
                    "id": "86190192-fbc8-41e2-95d8-4d7e4eedc199",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractWithObject",
                    "type": "Button",
                    "id": "24ca2de8-80ec-495f-ae17-9e4df4f681d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleBuilding",
                    "type": "Button",
                    "id": "a67a894f-25df-4bae-b28d-231dcfac0597",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleUpgrades",
                    "type": "Button",
                    "id": "a2ae6e64-5119-4382-9b6d-229e64ef7355",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f70ee99-4f1a-45bd-b9f9-a87e269a3118",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseWindowOpenPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "827b654f-65b4-4e47-90a2-5c7dd4f0d9ef",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e1a5d03-137b-4c00-bedf-a1eee93371ed",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleWagons",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d34d2f2-01cf-4ff3-ac16-f505acaade8f",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleProduction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bef99ee-e7d9-40b8-aef7-9675bc213d63",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleJournal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c5ee2a8-21d6-4541-94e1-12f914bcf04c",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fe7eb75-7fcc-49dc-b26c-a60e8a68a011",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractWithObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bdf6118-28f4-47f8-b3d0-b000b2960a8c",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "feec2ebf-0d88-4bb0-afba-0794b709776a",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleUpgrades",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerCamera",
            "id": "6e0f7517-3757-496d-823e-e379aeb2934a",
            "actions": [
                {
                    "name": "CameraMovement",
                    "type": "PassThrough",
                    "id": "42c50dc8-f508-4f61-808f-053bafd339c2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d36682e0-7e25-4c8b-9fa9-488a9a09dd5c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Building",
            "id": "3f34f77f-8554-4eed-b8b7-0f71c0bcd64a",
            "actions": [
                {
                    "name": "RotateBlueprintLeft",
                    "type": "Button",
                    "id": "c2b411bb-2e07-45c7-b92c-3751bc181498",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateBlueprintRight",
                    "type": "Button",
                    "id": "19e3544d-5006-47fd-bbab-9a10b62c4db7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceDownBlueprint",
                    "type": "Button",
                    "id": "43483b61-9016-4645-a3cd-cd7462e2865e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClearBlueprint",
                    "type": "Button",
                    "id": "462703b2-f19b-429e-944e-342c6707cc7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64356dba-9438-4118-a199-ecb240bc861a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBlueprintLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec7778eb-9acb-4d67-8ddb-ff60aa1b46d3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBlueprintRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de891e31-ca69-4ae9-a072-2790a3f72649",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceDownBlueprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2804ce4a-d74a-4841-b71e-df7fcca7ea76",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClearBlueprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}